--- a/index.html
+++ b/index.html
@@ -8,33 +8,34 @@
     <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
+
     <h1>Registration Form</h1>
 
-    <form class="template">
+    <form class="form-control">
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <input type="email" class="ipfield" id="exampleInputEmail1" aria-describedby="emailHelp">
           <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
 
         <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">First Name</label>
-            <input type="text" class="form-control" id="exampleInputPassword1">
+            <input type="text" class="ipfield" id="exampleInputPassword1">
         </div>
         <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Last Name</label>
-            <input type="text" class="form-control" id="exampleInputPassword1">
+            <input type="text" class="ipfield" id="exampleInputPassword1">
         </div>
         <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Mis</label>
-            <input type="text" class="form-control" id="exampleInputPassword1">
+            <input type="text" class="ipfield" id="exampleInputPassword1">
         </div>
 
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
+          <input type="password" class="ipfield" id="exampleInputPassword1">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary submit">   Submit    </button>
       </form>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
